--- a/MyWebsite.html
+++ b/MyWebsite.html
@@ -58,7 +58,7 @@
 			</ul>
 
 				<button>
-					Click here to find out more about my projects
+					Click here to find out about my projects
 				</button>
 				<br>
 				<br>
